@@ -7,10 +7,7 @@ import de.adorsys.datasafe.rest.impl.security.SecurityProperties;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -22,26 +19,18 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
-import javax.servlet.http.HttpServletResponse;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @RestController
 @RequiredArgsConstructor
-@Api(description = "Initial authentication operations")
 public class AuthenticateController {
 
     private final SecurityProperties securityProperties;
     private final AuthenticationManager authenticationManager;
 
     @PostMapping(SecurityConstants.AUTH_LOGIN_URL)
-    @ApiOperation("Get token for given username and password")
-    @ApiResponses(value={
-            @ApiResponse(code=200, message="Successfully logged in"),
-            @ApiResponse(code=401, message="Bad credentials")
-    })
     public void authenticate(@RequestBody UserDTO credentialsDTO, HttpServletResponse response)  {
         String username = credentialsDTO.getUserName();
         String password = credentialsDTO.getPassword();
@@ -53,7 +42,7 @@ public class AuthenticateController {
         List<String> roles = user.getAuthorities()
                 .stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         byte[] signingKey = securityProperties.getJwtSecret().getBytes();
 
